[package]
name = "snoozy"
version = "0.1.1"
authors = ["Tomasz Stachowiak"]
edition = "2018"

[dependencies]
failure = "0.1"
lazy_static = "1.4"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
bincode = "1.2"
twox-hash = "1.5"
pretty-bytes = "0.2"
abomonation = "0.7"
futures-preview = { version = "=0.3.0-alpha.19", features = ["compat"] }
async-trait = "0.1.17"